tests/baselines/reference/VariableDeclaration9_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration9_es6.ts(1,1): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration9_es6.ts (1 errors) ====
    let a: number
    ~~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.